# cop3504c

./: README.md
lab01/: calculator.py  sample-input-extra.txt  sample-output-standard.txt
lab02/: findfour.py  test-input-tie.txt  test-input.txt  test-output.txt
lab03/: cow.py  cowsay.py  test.py
lab04/: analyzer.py  make-report.py  report.adoc
lab05/: analyzer.cpp  meson.build
lab06/: ConsoleGfx.h  Image.cpp  Image.h  meson.build  scaler.cpp
lab07/: Cow.cpp  Cow.h  Dragon.cpp  Dragon.h  IceDragon.cpp  IceDragon.h  cowsay.cpp  meson.build  sample-output.txt  test.sh
lab08/: Cow.cpp  Cow.h  Dragon.cpp  Dragon.h  FileCow.cpp  FileCow.h  HeiferGenerator.cpp  IceDragon.cpp  IceDragon.h  cowsay.cpp  file_test.sh  meson.build  sample-output.txt  test.sh
lab09/: LinkedList.h  meson.build
lab10/: .gitignore  CMakeLists.txt  memeify.cpp  memer.cpp  memer.h  meson.build  meson_options.txt
project1/: rle_program.py  test-input.txt  test-output.txt  test.sh
project2/: pakudex.py  pakuri.py  sample-input.txt  sample-output.txt
project3/: .gitignore  Makefile
project3/src/: main.cpp
project4/: Button.h  CMakeLists.txt  GameState.h  Tile.h  Toolbox.h  meson.build  minesweeper.h  msw.cpp
